--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,14 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.2.30'
+    ext.gradleVersion = "3.1.3"
+    ext.kotlinVersion = '1.3.31'
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.tools.build:gradle:$gradleVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
 
@@ -23,6 +20,32 @@ allprojects {
             url 'https://oss.sonatype.org/content/repositories/snapshots/'
         }
     }
+}
+
+ext {
+    // Sdk, tools and version
+    compileSdkVersion = 27
+    minSdkVersion = 21
+    targetSdkVersion = 27
+    versionCode = 1
+    versionName = "1.0"
+
+
+    // App dependencies
+    appcompatVersion = "27.1.1"
+    designVersion = "27.1.1"
+    constraintLayoutVersion = "1.1.3"
+    shapeOfViewVersion = "1.0.8"
+    materialSearchViewVersion = "1.4.0"
+    retrofitVersion = "2.6.0"
+    loggingInterceptorVersion = "3.12.1"
+    rxJavaAdapterVersion = "1.0.0"
+    rxJavaVersion = "2.2.7"
+    rxKotlinVersion = "2.3.0"
+    rxAndroidVersion = '2.1.1'
+    daggerVersion = "2.21"
+    kotterKnifeVersion = "0.1.0-SNAPSHOT"
+    junitVersion = "4.12"
 }
 
 task clean(type: Delete) {
