--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext.gradleVersion = "3.1.3"
-    ext.kotlinVersion = '1.3.31'
+    ext.kotlinVersion = '1.3.41'
 
     repositories {
         google()
@@ -24,16 +24,15 @@ allprojects {
 
 ext {
     // Sdk, tools and version
-    compileSdkVersion = 27
+    compileSdkVersion = 28
     minSdkVersion = 21
-    targetSdkVersion = 27
+    targetSdkVersion = 28
     versionCode = 1
     versionName = "1.0"
 
-
     // App dependencies
-    appcompatVersion = "27.1.1"
-    designVersion = "27.1.1"
+    appcompatVersion = "28.0.0"
+    designVersion = "28.0.0"
     constraintLayoutVersion = "1.1.3"
     shapeOfViewVersion = "1.0.8"
     materialSearchViewVersion = "1.4.0"
@@ -42,7 +41,8 @@ ext {
     rxJavaAdapterVersion = "1.0.0"
     rxJavaVersion = "2.2.7"
     rxKotlinVersion = "2.3.0"
-    rxAndroidVersion = '2.1.1'
+    rxAndroidVersion = "2.1.1"
+    koinVersion = "2.0.1"
     kotterKnifeVersion = "0.1.0-SNAPSHOT"
     lifecycleVersion = "1.1.1"
     junitVersion = "4.12"
